Fix Dockerfile and icon

--- a/views/_layout.pug
+++ b/views/_layout.pug
@@ -6,6 +6,7 @@ html(lang="en")
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet" href="style.css")
+        link(rel="icon" type="image/png" href="/logo.png")
     body
         div.responsive
             include partials/titlebox
